--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,9 +1,13 @@
-:root{
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+  
+  :root{
     --footer-color:#2F303A;
     --header-color:#FFFFFF;
     --main-color:#FFFFFF;
 
-}
+} 
+
 #button{
     color:#212121 ;
 }
@@ -12,6 +16,37 @@
 }
 p{
     color: #757575;
+}
+a{
+    font-family: Raleway;
+    font-weight: 700;
+    font-style: normal;
+}
+header{
+    font-family: Roboto;
+    font-weight: 500;
+    font-style: normal;
+
+}
+main{
+    font-family: Roboto;
+    font-weight: 500;
+    font-style: normal;
+}
+h3{
+    font-family: Roboto;
+    font-weight: 700;
+    font-style: normal;
+}
+p{
+    font-family: Roboto;
+    font-weight: 400;
+    font-style: normal;
+}
+footer{
+    font-family: Roboto;
+    font-family: 400;
+    font-style: normal;
 }
 
 
